# RAG_LLM

./: .env.dev  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
services/: llm_service.py  pdf_service.py
ui/: chat_ui.py
utils/: file_utils.py  logging_utils.py
