[tool.poetry]
name = "rag-llm"
version = "0.1.0"
description = "RAG-based Q&A system using LLMs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
streamlit = "^1.32.0"
langchain = ">=0.1.0"
langchain-community = ">=0.0.28"
langchain-groq = "*"
openai = "^1.12.0"
chromadb = "^0.4.24"
pypdf = "^4.0.2"
tiktoken = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3